* fix for #6714   - don't handle images with ffmpeg, blender knows itself perfectly fine how to do that. This fix is done as per Qt handling (skip non-Qt files).